src/test/ui/consts/const-unsized.stderr
error[E0277]: the size for values of type `(dyn std::fmt::Debug + std::marker::Sync + 'static)` cannot be known at compilation time
  --> $DIR/const-unsized.rs:13:29
   |
LL | const CONST_0: Debug+Sync = *(&0 as &(Debug+Sync));
   |                             ^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `(dyn std::fmt::Debug + std::marker::Sync + 'static)`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: constant expressions must have a statically known size

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/const-unsized.rs:16:24
   |
LL | const CONST_FOO: str = *"foo";
   |                        ^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `str`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: constant expressions must have a statically known size

error[E0277]: the size for values of type `(dyn std::fmt::Debug + std::marker::Sync + 'static)` cannot be known at compilation time
  --> $DIR/const-unsized.rs:19:31
   |
LL | static STATIC_1: Debug+Sync = *(&1 as &(Debug+Sync));
   |                               ^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `(dyn std::fmt::Debug + std::marker::Sync + 'static)`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: constant expressions must have a statically known size

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/const-unsized.rs:22:26
   |
LL | static STATIC_BAR: str = *"bar";
   |                          ^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `str`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: constant expressions must have a statically known size

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
